--- a/index.html
+++ b/index.html
@@ -3,63 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .container {
-            padding: 0 100px 0 100px;
-            width: 1440px;
-            
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Resume</title>
 </head>
 <body>
     <div class="container">
-            <h3>Шикурова Алеся Владимировна</h3>
-    <p>Телефон: +375 33 652-20-83</p>
-    <p>E-mail: ales2503@yandex.by</p>
-    <p>Дата рождения: 25.03.1987</p>
-    <h4>Ключевые компетенции: </h4>
-    <ul>
-        <li>Верстка макета полученного от дизайнера используя HTML+CSS+JavaScript</li>
-        <li>Работа с CSS фреймворком Bootstrap</li>
-        <li>Pабота с CSS Flexbox и CSS Grid</li>
-        <li>Работа с сборщиком Gulp</li>
-        <li>Работа с системами контроля версий Git, GitHub</li>
-        <li>Работа с Figma и PerfectPixel</li>
-    </ul>
-    <h4>Образование:</h4>
-    <ul>
-        <li>2005-2010 Гомельский государственный технический университет им. П.О.Сухого (Инженер: Технология машиностроения)</li>
-        <li>2010-2011 Гомельский государственный технический университет им. П.О.Сухого (Магистр: Машиностроение и машиноведение)</li>
-    </ul>
-    <h4>Работа: </h4>
-    <ul>
-        <li>2011-2013 ОАО «Гомельский ПО «КРИСТАЛЛ»» (инженер-технолог)</li>
-        <li>2014-2016 ОАО «Мозырский машиностроительный завод» (начальник конструкторского бюро)</li>
-        <li>2017-2023 ОАО «Мозырский нефтеперерабатывающий завод» (инженер)</li>
-    </ul>
-
-    <h4>Компьютерные навыки: </h4>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Bootstrap</li>
-        <li>Materialize</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>MS Office</li>
-        <li>Gulp</li>
-        <li>VSCode</li>
-    </ul>
-    <h4>Работы:</h4>
-    <a href="https://alesia2503.github.io/CSS-generator/">Генератор теней CSS</a><br>
-    <a href="https://alesia2503.github.io/new_site/">Три страницы из Figma</a><br>
-    <a href="https://alesia2503.github.io/calendar/">Календарь</a><br>
-    <a href="https://alesia2503.github.io/site1/">Страница сайта по макету из Figma</a><br>
-    <a href="https://alesia2503.github.io/site.2/">Страница сайта по макету из Figma</a><br>
-    <a href="https://alesia2503.github.io/site3/">Страница сайта по макету из Figma</a><br>
+        <div class="wrap">
+            <div class="content">
+                <h1 class="name">Шикурова Алеся Владимировна</h1>
+                <div class="gallery">
+                    <img src="my.jpeg" alt="Photo" >
+                </div>
+                <p class="word">Телефон: +375 33 652-20-83</p>
+                <p class="word">E-mail: ales2503@yandex.by</p>
+                <p class="word">Дата рождения: 25.03.1987</p>
+                <h4  class="word">Ключевые компетенции: </h4>
+                <ul>
+                    <li class="word">Верстка макета полученного от дизайнера используя HTML+CSS+JavaScript</li>
+                    <li class="word">Работа с CSS фреймворками Bootstrap, Materialize</li>
+                    <li class="word">Pабота с CSS Flexbox и CSS Grid</li>
+                    <li class="word">Работа с сборщиком Gulp</li>
+                    <li class="word">Работа с системами контроля версий Git, GitHub</li>
+                    <li class="word">Работа с Figma и PerfectPixel</li>
+                </ul>
+                <h4 class="word">Образование:</h4>
+                <ul>
+                    <li class="word">2005-2010 Гомельский государственный технический университет им. П.О.Сухого (Инженер: Технология машиностроения)</li>
+                    <li class="word">2010-2011 Гомельский государственный технический университет им. П.О.Сухого (Магистр: Машиностроение и машиноведение)</li>
+                </ul>
+                <h4 class="word">Работа: </h4>
+                <ul>
+                    <li class="word">2011-2013 ОАО «Гомельский ПО «КРИСТАЛЛ»» (инженер-технолог)</li>
+                    <li class="word">2014-2016 ОАО «Мозырский машиностроительный завод» (начальник конструкторского бюро)</li>
+                    <li class="word">2017-2023 ОАО «Мозырский нефтеперерабатывающий завод» (инженер)</li>
+                </ul>
+                <h4 class="h4 word">Компьютерные навыки: </h4>
+                <ul class="center">
+                    <li class="bold">HTML</li>
+                    <li class="bold">CSS</li>
+                    <li class="bold">JavaScript</li>
+                    <li class="bold">Bootstrap</li>
+                    <li class="bold">Materialize</li>
+                    <li class="bold">Git</li>
+                    <li class="bold">GitHub</li>
+                    <li class="bold">MS Office</li>
+                    <li class="bold">Gulp</li>
+                    <li class="bold">VSCode</li>
+                    <li class="bold">Figma</li>
+                    <li class="bold">PerfectPixel</li>
+                </ul>
+                <h4 class="word">Работы:</h4>
+                <form action="" class="form_btn">
+                    <button class="btn_1" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу">Генератор теней CSS</button>
+                    <button class="btn_2" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу.<br> Здесь соединены 3 страницы, поэтому кликайте по кнопкам и ссылкам внутри:)">Три страницы из Figma</button>
+                    <button class="btn_3" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу.<br> Это универсальный календарь. В JS достаточно  просто поменять год" >Календарь (JS)</button>
+                    <button class="btn_4" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу.<br> Это страница с использованием Materialize">Страница сайта по макету из Figma (WD)</button>
+                    <button class="btn_5" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу.<br> Это страница с использованием Materialize">Страница сайта по макету из Figma (KONSTRUKT)</button>
+                    <button class="btn_6" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу.<br> Это страница с использованием Materialize">Страница сайта по макету из Figma (Alivio)</button>
+                    <button class="btn_7" target="_blank" form="forma" type="submit" data-tooltip="Нажмите на кнопку и перейдите на страницу.<br> Это карточка товара в интернет-магазин">Карточка товара по макету из Figma</button>
+                </form>
+            </div>
+        </div>
     </div>
-
+<script src="main.js"></script>
 </body>
 </html>
